minor footer change

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # SITE SETTINGS
 #
 title: Learning Experience Design (LXD)
-description: "Learning Experience Design (LXD) is a design approach that focuses on creating effective and engaging learning experiences. It combines principles from instructional design, user experience design, and educational psychology to create learning environments that are learner-centered and promote deep understanding."
+description: "Learning Experience Design (LXD) is a design approach that focuses on creating effective and engaging learning experiences. It combines principles from instructional design, user experience design, and educational psychology to create learning environments that are learner-centered and promote deep understanding | "
 year: 2025
 author: Donna MacLeod 
 # add search box to navbar, true/false
