--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # SITE SETTINGS
 #
 title: Learning Experience Design (LXD)
-description: "A place to host my LXD projects and resources."
+description: "An LXD portfolio"
 year: 2025
 author: Donna MacLeod 
 # add search box to navbar, true/false
